Fix compressed view on mobile edit css

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@ body{
 	height:100%;
 }
 
+svg:hover{
+	fill: #6dc2ff;
+	cursor:pointer;
+}
+
 .social-render{
 	width:1200px;
 	height:630px;
@@ -58,7 +63,6 @@ button{
 	font-size:1.4em;
 	background:#eaf8ff;
 	width:80%;
-	height:2.5em;
 	margin:1em 0;
 	border-radius:15px;
 	border:ridge 3px rgba(0,0,0,0.8);
@@ -254,7 +258,7 @@ button:hover{
 	border-bottom:3px solid black;
 	width:100%;
 	background:#f2f2ff;
-	height:100%;
+	height:10.5em;
 }
 .percentage{
 	color:white;
@@ -355,7 +359,7 @@ button:hover{
 	button{
 		width:60%;
 		font-size:1.6em;
-		height:3em;
+		min-height:3em;
 	}
  }
 
@@ -366,7 +370,7 @@ button:hover{
  	button{
  		width:60%;
  		font-size:1.6em;
- 		height:3em;
+ 		min-height:3em;
  	}
   }
 
